# opencv-practice

./: opencv-practice.ipynb  pyproject.toml
contour-detection/tutorial-3-contour-detection/: tutorial-3.ipynb
contour-detection/tutorial-4-contour-detection-channels/: tutorial-4.ipynb
contour-detection/tutorial-5-contour-detection-simple/: tutorial-5.ipynb
contour-detection/tutorial-6-contour-detection-simple-show-points/: tutorial-6.ipynb
contour-detection/tutorial-7-contour-hierarchies/: tutorial-7.ipynb
contour-detection/tutorial-8-dnn-deep-learning/: Untitled.ipynb
opencv-dnn-deep-learning/: 1-image-recognition.ipynb  2-object-detection.ipynb
